--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ta Apka",
+  "name": "khistory",
   "version": "0.0.1",
   "icon": "./1.png",
   "main": "node_modules/expo/AppEntry.js",
