--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
-
     "expo": "^42.0.0",
     "expo-barcode-scanner": "~11.1.2",
-    "react": "^17.0.2",
+    "expo-status-bar": "^1.2.0",
+    "react": "^16.13.1",
     "react-live-clock": "^5.6.1",
     "react-native": "^0.63.4",
-    "react-native-responsive-fontsize": "^0.5.1"
-
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-status-bar-height": "^2.6.0"
   },
   "private": true
 }
