Cytat component create & add firebase api

--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "expo-blur": "~9.0.3",
     "expo-font": "~9.2.1",
     "expo-status-bar": "^1.2.0",
+    "firebase": "^9.6.5",
     "react": "^16.13.1",
     "react-live-clock": "^5.6.1",
     "react-native": "^0.63.4",
+    "react-native-firebase": "^5.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-number": "^0.1.0",
