--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-number": "^0.1.0",
     "react-native-shadow-2": "^6.0.2",
-    "react-native-status-bar-height": "^2.6.0"
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-webview": "^11.17.1"
   },
   "private": true
 }
