--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "khistory",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "icon": "./1.png",
   "main": "node_modules/expo/AppEntry.js",
   "slug": "KaliszApp",
@@ -25,7 +25,11 @@
     "@expo-google-fonts/baloo-bhaina-2": "^0.2.2",
     "@expo-google-fonts/baloo-thambi-2": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
+    "@pnthach95/react-native-root-view-background": "^1.0.4",
     "@react-native-community/blur": "^3.6.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.4.1",
+    "@react-navigation/stack": "^6.1.1",
     "expo": "^42.0.0",
     "expo-app-loading": "1.1.2",
     "expo-barcode-scanner": "~11.1.2",
@@ -40,6 +44,8 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-number": "^0.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-shadow-2": "^6.0.2",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-webview": "^11.17.1"
