--- a/app.json
+++ b/app.json
@@ -2,14 +2,10 @@
   "expo": {
     "name": "KHistory",
     "slug": "KHistory",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "cover",
-      "backgroundColor": "#121212"
-    },
+
     "updates": {
       "fallbackToCacheTimeout": 0
     },
@@ -22,7 +18,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#121212"
       },
-      "package": "apka.apk"
+      "package": "apka.apk",
+      "versionCode": 3
     },
     "web": {
       "favicon": "./assets/favicon.png"
