--- a/app.json
+++ b/app.json
@@ -2,10 +2,12 @@
   "expo": {
     "name": "KHistory",
     "slug": "KHistory",
-    "version": "1.0.2",
+    "version": "1.0.4",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
+    "splash": {
+      "backgroundColor": "#121212"
+    },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
@@ -19,7 +21,7 @@
         "backgroundColor": "#121212"
       },
       "package": "apka.apk",
-      "versionCode": 3
+      "versionCode": 4
     },
     "web": {
       "favicon": "./assets/favicon.png"
