--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-responsive-number": "^0.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-select-dropdown": "^1.8.0",
     "react-native-shadow-2": "^6.0.2",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-webview": "^11.17.1"
