--- a/package.json
+++ b/package.json
@@ -30,26 +30,26 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.1",
     "@react-navigation/stack": "^6.1.1",
-    "expo": "^42.0.0",
-    "expo-app-loading": "1.1.2",
-    "expo-barcode-scanner": "~11.1.2",
-    "expo-blur": "~9.0.3",
-    "expo-font": "~9.2.1",
-    "expo-status-bar": "^1.2.0",
+    "expo": "^44.0.0",
+    "expo-app-loading": "~1.3.0",
+    "expo-barcode-scanner": "~11.2.0",
+    "expo-blur": "~11.0.0",
+    "expo-font": "~10.0.4",
+    "expo-status-bar": "~1.2.0",
     "firebase": "^9.6.5",
-    "react": "^16.13.1",
+    "react": "17.0.1",
     "react-live-clock": "^5.6.1",
-    "react-native": "^0.63.4",
+    "react-native": "0.64.3",
     "react-native-firebase": "^5.6.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-number": "^0.1.0",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-select-dropdown": "^1.8.0",
     "react-native-shadow-2": "^6.0.2",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-webview": "^11.17.1"
+    "react-native-webview": "11.15.0"
   },
   "private": true
 }
