--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@expo-google-fonts/baloo-thambi-2": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
     "@pnthach95/react-native-root-view-background": "^1.0.4",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/blur": "^3.6.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.1",
