--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-blur": "~9.0.3",
     "expo-font": "~9.2.1",
     "expo-status-bar": "^1.2.0",
+    "fiction-expo-restart": "^1.1.2",
     "firebase": "^9.6.5",
     "jsoneditor-react": "^3.1.2",
     "react": "^16.13.1",
@@ -46,6 +47,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-number": "^0.1.0",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-select-dropdown": "^1.8.0",
