--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@expo-google-fonts/baloo-bhaina-2": "^0.2.2",
     "@expo-google-fonts/baloo-thambi-2": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
+    "@flyerhq/react-native-link-preview": "^1.5.0",
     "@pnthach95/react-native-root-view-background": "^1.0.4",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/blur": "^3.6.0",
@@ -39,12 +40,14 @@
     "expo-status-bar": "^1.2.0",
     "fiction-expo-restart": "^1.1.2",
     "firebase": "^9.6.5",
+    "get-title-at-url": "^1.1.8",
     "jsoneditor-react": "^3.1.2",
     "react": "^16.13.1",
     "react-live-clock": "^5.6.1",
     "react-native": "^0.63.4",
     "react-native-firebase": "^5.6.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-link-preview": "^1.4.2",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-number": "^0.1.0",
     "react-native-restart": "^0.0.24",
