--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "react-native-select-dropdown": "^1.8.0",
     "react-native-shadow-2": "^6.0.2",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-webview": "^11.17.1"
+    "react-native-webview": "^11.17.1",
+    "react-native-web": "~0.13.12"
   },
   "private": true
 }
